# KAQ

./: CMakeLists.txt  README.md
include/: doctest.h
src/: CMakeLists.txt  main.cpp
src/royal_family_tree/exceptions/: AlreadyExistingMemberException.cpp  AlreadyExistingMemberException.h  EmptyHierarchyException.cpp  EmptyHierarchyException.h  MemberNotFoundException.cpp  MemberNotFoundException.h
src/royal_family_tree/heir/: Heir.cpp  Heir.h
src/royal_family_tree/tree/: Hierarchy.cpp  Hierarchy.h
src/runner/: Runner.cpp  Runner.h
src/utils/: Religion.h
test/: CMakeLists.txt  test_main.cpp
